syntax = "proto3";

package proto.common;

import "google/protobuf/empty.proto";

option java_package = "com.grpc.course";
option java_multiple_files = true;

message BalanceCheckRequest {
    int32 account_number = 1;
}

message AccountBalance {
    int32 balance = 1;
    int32 account_number = 2;
}

message AllAccountsResponse {
    repeated AccountBalance accounts = 1;
}

message WithdrawRequest {
    int32 account_number = 1;
    int32 amount = 2;
}

message Money {
    int32 amount = 1;
}

message DepositRequest {
    oneof request{
        int32 account_number = 1;
        Money money = 2;
    }
}

service BankService {
    rpc GetAccountBalance (BalanceCheckRequest) returns (AccountBalance);
    rpc GetAllAccounts (google.protobuf.Empty) returns (AllAccountsResponse);
    rpc Withdraw (WithdrawRequest) returns (stream Money);
    rpc Deposit (stream DepositRequest) returns (AccountBalance);
}
